--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
-        "react-icons": "^4.1.0",
+        "react-icons": "^4.12.0",
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.2",
         "typewriter-effect": "^2.18.2",
+        "vercel": "^37.14.0",
         "web-vitals": "^3.1.1"
     },
     "scripts": {
